--- a/templates/postAdded.html
+++ b/templates/postAdded.html
@@ -15,7 +15,16 @@
     <h1>Welcome To -The Blogger-</h1>
     <h2><i>(Halloween Edition)</i></h2>
     <hr class="banner">
+
+    <h2>Your post was added</h2>
     
+    <div class="post">
+      <h3 class="title"><strong>Title: {{title}}</strong><hr></h3>
+      <p class="content">{{content}}<hr></p>
+    </div>
+
+    <h2><a href="https://Build-a-Blog.dstoutin97.repl.co">Return To Feed</a></h2>
+
     <script src="main.py"></script>
   </body>
 </html>
