--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,16 +3,23 @@ body {
   text-align: center;
 }
 
-hr {
-  border-top: black 5px dashed;
+.banner {
+  border: 0;
+  height: 23px;
+  background-image: url(../images/cartoonPumpkin.png);
+  background-repeat: repeat-x;
+  background-size: 24px 24px;
+  overflow: hidden;
 }
 
 h1 {
   text-align: center;
+  font-weight: bold;
 }
 
 h2 {
   text-align: center;
+  font-weight: bold;
 }
 
 form {
@@ -38,11 +45,15 @@ input[type=text] {
   border: solid black 2px;
 }
 
-input[type=textarea] {
+textarea {
   width: 90%;
-  height: 100px;
+  height: auto;
   margin: 5px 0px;
   border: solid black 2px;
+  white-space: normal;
+  overflow-wrap: normal;
+  overflow-y: scroll;
+ 
 }
 
 input[type=password] {
@@ -57,4 +68,19 @@ a {
   padding: 2px;
   margin: 5px;
   background-color: black;
+}
+
+.post {
+  text-align: left;
+  position: relative;
+  left: 25%;
+  width: 50%;
+  border: solid black 3px;
+  background-color: black;
+  color: white;
+}
+
+.content {
+  left: 5%;
+  margin: 5%;
 }
