--- a/templates/postAdded.html
+++ b/templates/postAdded.html
@@ -19,7 +19,10 @@
     <h2>Your post was added</h2>
     
     <div class="post">
-      <h3 class="title"><strong>Title: {{title}}</strong><hr></h3>
+      <a href="https://Build-a-Blog.dstoutin97.repl.com">
+        <h3 class="title"><strong>---Title: {{title}}---</strong></h3>
+      </a>
+      <hr>
       <p class="content">{{content}}<hr></p>
     </div>
 
