--- a/templates/postAdded.html
+++ b/templates/postAdded.html
@@ -19,7 +19,7 @@
     <h2>Your post was added</h2>
     
     <div class="post">
-      <a href="https://Build-a-Blog.dstoutin97.repl.com">
+      <a href="https://Build-a-Blog.dstoutin97.repl.co">
         <h3 class="title"><strong>---Title: {{title}}---</strong></h3>
       </a>
       <hr>
